maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:103: error: value =- is not a member of Int
  	indications(0)=-1
                      ^JediEscaper:107: error: value =- is not a member of Int
  	indications(1)=-1
                      ^JediEscaper:111: error: value =- is not a member of Int
  	indications(2)=-1
                      ^JediEscaper:115: error: value =- is not a member of Int
  	indications(3)=-1
                      ^